// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude option should match snapshot for a single RegExp value excluded1: assets 1`] = `
{
  "entry.css": "body{color:red}a{color:blue}",
  "excluded1.css": "a {
  text-align: center;
}

",
  "excluded2.css": "body{color:red;font-size:20px}a{color:blue}",
}
`;

exports[`exclude option should match snapshot for a single RegExp value excluded1: errors 1`] = `[]`;

exports[`exclude option should match snapshot for a single RegExp value excluded1: warnings 1`] = `[]`;

exports[`exclude option should match snapshot for a single String value excluded1: assets 1`] = `
{
  "entry.css": "body{color:red}a{color:blue}",
  "excluded1.css": "a {
  text-align: center;
}

",
  "excluded2.css": "body{color:red;font-size:20px}a{color:blue}",
}
`;

exports[`exclude option should match snapshot for a single String value excluded1: errors 1`] = `[]`;

exports[`exclude option should match snapshot for a single String value excluded1: warnings 1`] = `[]`;

exports[`exclude option should match snapshot for multiple RegExp values excluded1 and excluded2: assets 1`] = `
{
  "entry.css": "body{color:red}a{color:blue}",
  "excluded1.css": "a {
  text-align: center;
}

",
  "excluded2.css": "body {
  color: red;
}
body {
  color: red;
  font-size: 20px;
}
a {
  color: blue;
}

",
}
`;

exports[`exclude option should match snapshot for multiple RegExp values excluded1 and excluded2: errors 1`] = `[]`;

exports[`exclude option should match snapshot for multiple RegExp values excluded1 and excluded2: warnings 1`] = `[]`;

exports[`exclude option should match snapshot for multiple String values excluded1 and excluded2: assets 1`] = `
{
  "entry.css": "body{color:red}a{color:blue}",
  "excluded1.css": "a {
  text-align: center;
}

",
  "excluded2.css": "body {
  color: red;
}
body {
  color: red;
  font-size: 20px;
}
a {
  color: blue;
}

",
}
`;

exports[`exclude option should match snapshot for multiple String values excluded1 and excluded2: errors 1`] = `[]`;

exports[`exclude option should match snapshot for multiple String values excluded1 and excluded2: warnings 1`] = `[]`;
